gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/array_bool.d
version https://git-lfs.github.com/spec/v1
oid sha256:4a516cd6006d187ea58a89f5bf8b0fe2ed39ce100dbdb9aebf5432cd9d14b231
size 652
